# game

./: CMakeLists.txt  gcc_Debug.h  gcc_Release.h  input.h  russia-Debug.vgdbsettings  russia-Release.vgdbsettings  russia.c  russia.vcxproj  russia.vcxproj.filters
VisualGDBCache/russia-Debug/: compile_commands.json
include/: head4log.h  russia.h
src/: russia.cpp
